--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,21 @@ html
 body 
 {
   margin: 0;
+  background-color: #101010;
 }
 header 
 {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  box-shadow: 0 0 1rem #151515;
   margin: 3rem;
   border-radius: 10px;
   padding: 1rem;
-  background-color: #1b995e;
+  background-color: #202020;
   color: white;
   text-align: center;
 }
 #assignment 
 {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  box-shadow: 0 2px 8px rgba(30, 30, 30, 0.8);
   margin: 3rem;
   border-radius: 10px;
   padding: 1rem;
@@ -31,8 +32,8 @@ header
 #assignment h2 
 {
   font-size: 2rem;
-  border-bottom: 4px solid #ccc;
-  color: #1b995e;
+  border-bottom: 3px solid #CCCCCC;
+  color: #CCCCCC;
   margin: 0 0 1rem 0;
 }
 #assignment ul 
@@ -46,7 +47,7 @@ header
   margin: 1rem 0;
   font-size: 1.25rem;
   font-weight: bold;
-  background-color: #8ddba4;
+  background-color: #CCCCCC;
   padding: 0.5rem;
   color: #1f1f1f;
   border-radius: 25px;
@@ -55,30 +56,36 @@ header
 #assignment li:hover 
 {
   cursor: pointer;
-  background-color: rgba(141, 219, 164, 0.8);
-  color: rgba(31, 31, 31, 0.5);
+  background-color: rgba(244, 244, 244, 0.5);
+  color: rgba(11, 11, 11, 0.5);
 }
 #assignment input 
 {
   font: inherit;
-  border: 1px solid #ccc;
+  border: 1px solid #CCCCCC;
+  background-color: #333333;
   margin-right: 1%;
+  padding: 2px;
+  color: #CCCCCC;
+  border-radius: 5px;
 }
 #assignment input:focus 
 {
   outline: none;
-  border-color: #1b995e;
-  background-color: #d7fdeb;
+  border-color: #CCCCCC;
+  background-color: #101010;
 }
 #assignment button 
 {
   font: inherit;
   cursor: pointer;
-  border: 1px solid #ff0077;
-  background-color: #ff0077;
-  color: white;
-  padding: 0.05rem 1rem;
+  border: 1px solid #CCCCCC;
+  background-color: transparent;
+  color: #FFFFFF;
+  padding: 2px 1rem;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
+  border-radius: 5px;
+  transition: all 0.2s ease-out;
 }
 #assignment button:last-of-type
 {
@@ -87,7 +94,7 @@ header
 }
 #assignment button:hover, #assignment button:active 
 {
-  background-color: #ec3169;
-  border-color: #ec3169;
+  background-color: #CCCCCC;
+  color: #000000;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.26);
 }
